--- a/package.json
+++ b/package.json
@@ -33,22 +33,19 @@
     "build:js": "rollup --config",
     "watch": "run-s 'build:js -- --watch'",
     "prepack": "run-s build",
-    "test:unit": "cross-env NODE_ENV=test nyc run-s test:unit:base",
-    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
     "lint:peer": "npm ls >/dev/null"
   },
   "devDependencies": {
     "@babel/register": "7.18.6",
-    "@istanbuljs/nyc-config-babel": "3.0.0",
     "@travi/any": "2.1.5",
     "@travi/babel-preset": "3.0.89",
     "@travi/eslint-config": "3.0.4",
     "@travi/eslint-config-mocha": "1.0.18",
-    "babel-plugin-istanbul": "6.1.1",
     "ban-sensitive-files": "1.9.18",
+    "c8": "7.11.3",
     "chai": "4.3.6",
-    "codecov": "3.8.3",
     "commitlint-config-travi": "1.4.16",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
@@ -56,7 +53,6 @@
     "lockfile-lint": "4.7.6",
     "mocha": "10.0.0",
     "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
     "remark-cli": "10.0.1",
     "remark-preset-lint-travi": "4.0.1",
     "remark-toc": "8.0.1",
